fix: y-overflow scroll

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,8 +9,6 @@
   padding: 0;
   box-sizing: content-box;
   touch-action: manipulation;
-  overflow: hidden;
-  overflow-y: auto;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
 }
